--- a/watermeter.yaml
+++ b/watermeter.yaml
@@ -5,14 +5,14 @@ esp8266:
   board: esp01_1m
 
 external_components:
+  #source:
+  #  type: local
+  #  path: ./components
   source:
-    type: local
-    path: ./components
-#  source:
-#    type: git
-#    url: https://github.com/grob6000/...
-#    username: !secret github_username
-#    password: !secret github_token
+    type: git
+    url: https://github.com/grob6000/esphome-externalcomponents
+    username: !secret github_username
+    password: !secret github_token
 
 # Enable logging
 logger:
@@ -32,7 +32,7 @@ wifi:
   - ssid: !secret wifi_ssid
     password: !secret wifi_password
     hidden: true
-  domain: ".localdomain"
+  domain: !secret domain
   fast_connect: true
 
 #status_led:
