--- a/soliss5-32.yaml
+++ b/soliss5-32.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: soliss5
+  name: soliss5-32
 
 external_components:
   source:
@@ -9,12 +9,13 @@ external_components:
 #    type: git
 #    url: https://github.com/grob6000/esphome-externalcomponents
   
-esp8266:
-  board: esp12e
+esp32:
+  board: nodemcu-32s
   
 # Enable logging
 logger:
   baud_rate: 0
+  level: VERBOSE
 
 # Enable Home Assistant API
 api:
@@ -22,8 +23,8 @@ api:
     key: !secret encryption1
   reboot_timeout: 0s
 
-#web_server:
-#  port: 80
+web_server:
+  port: 80
 
 ota:
   password: !secret otapassword1
